# freemonad-benchmark

./: freemonad-benchmark.cabal
