name: freemonad-benchmark
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
maintainer: tob@butter.sh
homepage: https://github.com/feuerbach/freemonad-benchmark
category: Testing
author: Roman Cheplyaka

library 
    build-depends:
        base >=4.7 && <4.8,
        transformers -any,
        mtl -any,
        criterion -any
    default-language: Haskell2010
    other-extensions: FlexibleInstances MultiParamTypeClasses
                      FlexibleContexts RankNTypes GADTs DeriveFunctor
                      FunctionalDependencies ExistentialQuantification ViewPatterns
                      TypeOperators TypeSynonymInstances UndecidableInstances
    exposed-modules:
        Free
        Data.TConsList
        Data.Interface.TSequence
        Data.Interface.Sequence
        Data.FastTCQueue
        Data.CTQueue
        Data.TSnocList
        Data.RTQueue
        Coroutine
        StateF
        Base
        Codensity
        Church
        NoRemorse
    ghc-options: -O2
 
benchmark bench
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    build-depends:
        base >=4.7 && <4.8,
        transformers -any,
        mtl -any,
        criterion -any,
        freemonad-benchmark
    buildable: True
    default-language: Haskell2010
    ghc-options: -O2
    other-extensions: FlexibleInstances MultiParamTypeClasses
                      FlexibleContexts RankNTypes GADTs DeriveFunctor
                      FunctionalDependencies ExistentialQuantification ViewPatterns
                      TypeOperators TypeSynonymInstances UndecidableInstances
